--- a/style.css
+++ b/style.css
@@ -42,14 +42,14 @@ header::after {
   right: -60px;
 }
 header img {
-  height: 140px;
+  height: 190px;
   position: relative;
   z-index: 5;
   opacity: 0;
   transform: translateY(-25px);
   animation: logoDrop 1s ease-out forwards;
   filter: drop-shadow(0px 5px 18px rgba(255, 255, 255, 0.35));
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   margin-top: 5px;
 }
 @keyframes logoDrop {
@@ -66,7 +66,7 @@ header h1 {
   position: relative;
   opacity: 0;
   animation: fadeInTitle 1.3s ease-out forwards;
-  margin-top: 5px;
+  margin-top: 0px;
 }
 @keyframes fadeInTitle {
   to {
@@ -150,6 +150,7 @@ header h1 {
   max-height: 100%;
   object-fit: contain;
   display: block;
+  border-radius: 50px;
 }
 .product-details h3 {
   font-size: 17px;
